Todo:
Added keyboard remapping
Resize of windows when in zoom-mode fails.
FPS counter not working 
Make it easier to shift from continuous to manual.
Bug: specular exponent = 0
Commandline support
Sourceforge page.

13-06-11 [MHC]
[5h]
Added sliders to user parameter groups.
Fixed sticky keys
Added '#define providesInit', '#define providesColor'
Fixed TileRender bug on Mac (Thanks to David Burnett) - probably also fixes occasional crash on Win.
Raytracer updates (reflections, hard shadows)

04-05-11 [MHC]
[3h] 
Added KaliSet, BurningShip, Spudsville
Added 2DJulia.frag and Complex.frag to make 2D fractals easier.
Added padlock icon (in progress)

01-04-11 [MHC]
Shadows (can be improved)
New AO method (similar to Rrola/Subblue - sample 5 positions along normal for proximity).
Now disables uniformes which are not used in shader.
Added dithering (for banding removal) and very simple RNG functionality.

-- v0.8 release --

19-03-11 [MHC,2h]
Execute 'Default' preset on load
Fixed: White halo around some structure (see standard mandelbox)
Fixed: Clean up examples (partially OK - create defaults for all)
Updated help.

17-03-11 [MHC, 2h]
Fix: Bug, if missing newline on last pos: Could not create fragment shader: 0(341) : error C0104: Unknown pre-processor directive #group
WinBuild: added imageplugins
Slider keyboard shortcuts

15-03-11 [MHC, 1h]
Linux compile bug fix
ATI Shader fix
'Ducks' fractal HUD display

13-03-11 [2h, MHC]
Mouse Wheel support
2D Keyboard shortcuts

11-03-11 [2h, MHC]
Added Dither
Added support for presets
Fixed Fog

10-03-11 [2h, MHC]
Added new eventloop supporting multiple simultaneous keys
BugFix: up is reset on build
BugFix: preview off requires rebuild
BugFix: 'Reset' should reset camera

09-03-11 Added new ColorFloat widget
[2h]	 Now orthogonalizes Camera Up vector
		 Added 'fog' to raytracer
		 
08-03-11 Added support for lower resolution preview rendering (using two stage Render-to-FrameBufferObject / Texture rendering)