@@ -1,4 +1,5 @@
 #info SphereSponge Distance Estimator.
+#define providesInit
 #include "DE-Raytracer.frag"
 #include "MathUtils.frag"
 #group New Menger
