@@ -595,3 +595,50 @@ Rot2 = 0.49152,0.81354,11.7
 Iterations = 17
 ColorIterations = 3
 #endpreset
+
+#preset Kungsgatan
+FOV = 0.60294
+Eye = -1.0065,-0.149819,-0.555727
+Target = 6.69719,-4.523,0.479286
+Up = -0.214931,-0.909279,-0.356394
+AntiAlias = 1
+AntiAliasBlur = 1
+Detail = -3.86456
+MaxStep = 1.66655
+DetailNormal = -3.77776
+DetailAO = -0.34566
+FudgeFactor = 0.65152
+MaxRaySteps = 299
+MaxRayStepsDiv = 1.8
+BoundingSphere = 2
+Dither = 0.25862
+AO = 0,0,0,0.7
+Specular = 2.2785
+SpecularExp = 16
+SpotLight = 1,1,1,0.67143
+SpotLightDir = 0.78126,0.4375
+CamLight = 1,1,1,1.84616
+CamLightMin = 0.77273
+Glow = 1,1,1,0.26027
+Fog = 0.14174
+HardShadow = 0.18462
+BaseColor = 1,1,1
+OrbitStrength = 1
+X = 0.411765,0.6,0.560784,-0.40952
+Y = 0,0.509804,0,0.29524
+Z = 0.666667,0.666667,0.498039,0.50476
+R = 0.666667,0.666667,0.498039,0.36538
+BackgroundColor = 0.498039,0.584314,0.584314
+GradientBackground = 0.17235
+CycleColors = true
+Cycles = 5.16828
+Reflection = 0
+Scale = 1.83332
+Offset = 0.99123,0,0.59649
+Angle1 = -127.501
+Rot1 = 0.42372,-0.0678,0.33898
+Angle2 = -71.2512
+Rot2 = -0.57628,0.55932,0.44068
+Iterations = 18
+ColorIterations = 13
+#endpreset
